# qwenjax

./: demo.py  demo_vision.py  pyproject.toml
src/qwen_jax/: __init__.py  attention.py  cache.py  common.py  config.py  equinox_utils.py  linear.py  linear4bit.py  loading.py  lora.py  mlp.py  model.py  rope.py  testutil.py  text.py  vision.py
src/qwen_jax/utils/: buffer.py  collect.py  debug.py  indexing.py  pjit.py  rng.py
tests/: conftest.py  test_indexing.py  test_qwen3vl.py
